# kaggle-intermediate-ml

./: .gitignore  README.md  pyproject.toml
src/intermediate_ml/: __init__.py  categorical_data.ipynb  cross_validation.ipynb  missing_values.ipynb  pipelines.ipynb  step_1.ipynb  step_1.py
